# medical

./: .env.example  .gitignore  CLAUDE.md  README
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 580c730a890f_add_theme_preferences_to_accounts.py  5df867aa0e51_add_conditions_table.py  9d81bd8fc2bd_add_allergies_and_medications_tables.py  9fefe2cf140c_add_labs_table_and_lab_attribution_on_.py  a368ae712521_add_accounts_refresh_tokens_audit_log_.py  ac9ca50336fc_add_lab_departments_and_panels_hierarchy.py  aeaa48b0bb45_add_patients_table.py  c8a6af86a80b_add_observation_types_and_lifestyle_.py  e88b6036ee63_add_roles_and_account_roles_for_admin_.py  ea4260e45547_add_needs_clinical_review_to_lab_.py  eef39c9e1f7c_add_lab_catalogue_reports_results_and_.py  fe54451c94dc_add_epi_vaccines_immunizations_and_.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/fhir/: allergy.py  condition.py  family_history.py  immunization.py  medication.py  observation.py
backend/app/models/: __init__.py  account.py  account_role.py  (+20 more)
backend/scripts/: grant_admin.py
backend/tests/: conftest.py  test_admin_catalogue.py  test_admin_security.py  test_allergies.py  test_auth.py  test_conditions.py  test_export.py  test_family_history.py  test_health.py  test_idc_loader.py  test_immunizations.py  test_lab.py  test_lab_hierarchy.py  test_lab_views.py  test_medications.py  test_normality.py  test_observations.py  test_patients.py  test_summary.py
(+130 files in other folders)
